# tazamun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SMOKE.md  build.rs
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
assets/branding/: CONCEPT.md  render.sh  tazamun.icns
assets/gui/: icon-128.rgba  wordmark.rgba
assets/screenshots/: make_cli_cards.py
benches/: chunking.rs
deploy/relay/: .env.example  Dockerfile  README.md  acceptance-drill.sh  config.toml  docker-compose.yml  entrypoint.sh
docs/: PENTEST_PLAYBOOK.md  PUBLISHING.md  SIGNING.md  THREAT_MODEL.md
examples/: gen_seeds.rs  hostile_peer.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame.rs  fuzz_ignore.rs  fuzz_manifest.rs  fuzz_msg.rs  fuzz_ticket.rs
src/: audit.rs  cli.rs  conflicts.rs  daemon.rs  dashboard.html  dashboard.rs  doctor.rs  guard.rs  gui_native.rs  home.rs  hooks.rs  ipc.rs  lib.rs  locks.rs  main.rs  notify.rs  oneshot.rs  proto.rs  ratelimit.rs  registry.rs  service.rs  session.rs  setup.rs  state.rs  suggest.rs  supervisor.rs  versions.rs  watcher.rs  win_fs.rs
src/gui_native/: a11y.rs  balance.rs  ceremony.rs  chrome.rs  colophon.rs  components.rs  constellation.rs  controls.rs  copy.rs  dropzone.rs  fields.rs  figures.rs  focusnav.rs  folderpick.rs  grouping.rs  health.rs  marginalia.rs  onboarding.rs  ornament.rs  prefs.rs  rhythm.rs  selection.rs  shortcuts.rs  statusbar.rs  sysopen.rs  telemetry.rs  theme.rs  toasts.rs
src/net/: control.rs  endpoint.rs  membership.rs  mod.rs  telemetry.rs
src/sync/: chunker.rs  ignore.rs  index.rs  manifest.rs  mod.rs  transfer.rs  vclock.rs
src/ui/: mod.rs  progress.rs
tests/: conflicts.rs  dashboard.rs  health.rs  history.rs  ignore.rs  lease_ergonomics.rs  locking.rs  long_paths.rs  membership.rs  observability.rs  oneshot.rs  portability.rs  roles_wire.rs  scale.rs  security.rs  service_lifecycle.rs  sovereignty.rs  supervisor_multi.rs  sync_flow.rs  win_resilience.rs
tests/common/: mod.rs
