[package]
name = "tazamun"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "تزامُن — strict-checkout P2P folder sync over iroh. No server ever reads your files."
repository = "https://github.com/cc1a2b/tazamun"
homepage = "https://github.com/cc1a2b/tazamun"

[lib]
name = "tazamun"
path = "src/lib.rs"

[[bin]]
name = "tazamun"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
blake3 = { version = "1.8.5", features = ["rayon"] }
chacha20poly1305 = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
clap_mangen = "0.2.29"
console = "0.16.4"
data-encoding = "2.11.0"
fastcdc = "4.0.1"
hkdf = "0.13.0"
hmac = "0.13.0"
humantime = "2.3.0"
indicatif = "0.18.6"
interprocess = { version = "2.4.2", features = ["tokio"] }
iroh = "1"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
iroh-mdns-address-lookup = "0.4.0"
n0-future = "0.3.2"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
postcard = { version = "1.1.3", features = ["use-std"] }
qrcode = "0.14.1"
rand = "0.10.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
iroh = { version = "1", features = ["test-utils"] }
tempfile = "3.27.0"

[[bench]]
name = "chunking"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Optimize dependency code even in debug/test builds. tazamun's own crate stays
# unoptimized (fast compiles, good backtraces), but hot dependencies — BLAKE3,
# FastCDC, the iroh QUIC/crypto stack — run at full speed, so the heavy
# integration tests (a 32 MiB chunk/hash/transfer round-trip) complete quickly
# and reliably on shared CI runners instead of timing out in a debug build.
[profile.dev.package."*"]
opt-level = 2

# The `fuzz/` crate (cargo-fuzz + libFuzzer) is its own detached crate, excluded
# from this workspace so `cargo build/test/clippy` and the release build never
# touch it (it needs nightly + a sanitizer). Build/run it with `cargo +nightly
# fuzz …` — see docs/PENTEST_PLAYBOOK.md.
[workspace]
exclude = ["fuzz"]

# cargo-dist drives .github/workflows/release.yml (regenerate with `dist generate`).
# pr-run-mode = "skip" keeps release.yml triggered ONLY on version tags — never
# on pushes/PRs — so no release machinery runs until the single v0.1.0 tag.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
# Build-provenance attestations over all artifacts at tag time (free).
github-attestations = true
# Signing placeholders — post-v0.1 purchase decisions; see docs/SIGNING.md.
# ssldotcom-windows-sign = "prod"
# macos-sign = true
installers = ["shell", "powershell", "npm", "homebrew"]
tap = "cc1a2b/homebrew-tap"
publish-jobs = ["homebrew"]
npm-scope = "@cc1a2b"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
checksum = "sha256"
pr-run-mode = "skip"

[build-dependencies]
embed-manifest = "1.5.0"
