[package]
name = "tazamun"
version = "0.1.2"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Tazamun — strict-checkout P2P folder sync over iroh. No server ever reads your files."
repository = "https://github.com/cc1a2b/tazamun"
homepage = "https://github.com/cc1a2b/tazamun"
readme = "README.md"
keywords = ["sync", "p2p", "encrypted", "file-locking", "iroh"]
categories = ["command-line-utilities", "filesystem", "network-programming"]
# What `cargo publish` ships. The compile needs assets/fonts, assets/gui and
# the .ico + mono svg out of assets/branding — everything else under assets is
# documentation weight (screenshots, brand PNG renders) that would push the
# crate toward the registry size limit for nothing. Fuzz corpora, CI, and the
# demo material stay out for the same reason.
exclude = [
    "/assets/screenshots",
    "/assets/branding/png",
    "/assets/branding/previews",
    "/fuzz",
    "/deploy",
    "/.github",
    "/docs",
    "/SMOKE.md",
]

[lib]
name = "tazamun"
path = "src/lib.rs"

[[bin]]
name = "tazamun"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
blake3 = { version = "1.8.5", features = ["rayon"] }
chacha20poly1305 = "0.11.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
clap_mangen = "0.2.29"
console = "0.16.4"
data-encoding = "2.11.0"
# Native GUI (`tazamun gui`). glow (OpenGL) rather than the new wgpu default: the
# widest compatibility across Windows/macOS/Linux (and WSLg), no Vulkan needed.
eframe = { version = "0.35.0", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
fastcdc = "4.0.1"
hkdf = "0.13.0"
hmac = "0.13.0"
humantime = "2.3.0"
ignore = "0.4.28"
indicatif = "0.18.6"
interprocess = { version = "2.4.2", features = ["tokio"] }
iroh = "1"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
iroh-mdns-address-lookup = "0.4.0"
n0-future = "0.3.2"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
postcard = { version = "1.1.3", features = ["use-std"] }
qrcode = "0.14.1"
rand = "0.10.2"
rayon = "1.12.0"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "pollster"] }
self_update = { version = "0.44.0", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
iroh = { version = "1", features = ["test-utils"] }
tempfile = "3.27.0"

[[bench]]
name = "chunking"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Optimize dependency code even in debug/test builds. tazamun's own crate stays
# unoptimized (fast compiles, good backtraces), but hot dependencies — BLAKE3,
# FastCDC, the iroh QUIC/crypto stack — run at full speed, so the heavy
# integration tests (a 32 MiB chunk/hash/transfer round-trip) complete quickly
# and reliably on shared CI runners instead of timing out in a debug build.
[profile.dev.package."*"]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# The `fuzz/` crate (cargo-fuzz + libFuzzer) is its own detached crate, excluded
# from this workspace so `cargo build/test/clippy` and the release build never
# touch it (it needs nightly + a sanitizer). Build/run it with `cargo +nightly
# fuzz …` — see docs/PENTEST_PLAYBOOK.md.
[workspace]
exclude = ["fuzz"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# Whether to enable GitHub Attestations
github-attestations = true
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "cc1a2b/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# The npm package should have this name
npm-package = "tazamun"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Checksums to generate for each App
checksum = "sha256"
# Which actions to run on pull requests
pr-run-mode = "skip"
# The generated CI carries one deliberate hand edit (the homebrew token gate);
# do not let `dist generate` flag or overwrite it.
allow-dirty = ["ci"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# Whether to install an updater program
install-updater = false

[build-dependencies]
# Windows-target only (build-dep; no runtime cost): embeds the app icon,
# VERSIONINFO identity fields, and the longPathAware manifest in one step.
winresource = "0.1.20"
